Updated SPEC file. Updated README. Fixed Makefile creation when compiling for one GUI toolkit only.

--- a/gtk-server/src/gtk-server.cfg
+++ b/gtk-server/src/gtk-server.cfg
@@ -1511,6 +1511,11 @@ ENUM_NAME = O_RDONLY, 0
 ENUM_NAME = O_WRONLY, 1
 ENUM_NAME = RAND_MAX, 2147483647
 ENUM_NAME = M_PI, 3.14159265358979323846
+ENUM_NAME = STDIN_FILENO, 0
+ENUM_NAME = STDOUT_FILENO, 1
+ENUM_NAME = STDERR_FILENO, 2
+ENUM_NAME = EXIT_SUCCESS, 0
+ENUM_NAME = EXIT_FAILURE, 1
 #
 #---------------------------------------------------------------------------
 #
